apps/no-dns-test-6/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: no-dns-test-6
  namespace: dev
  labels:
    app: no-dns-test-6
    backstage.io/kubernetes-id: no-dns-test-6
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: no-dns-test-6
  template:
    metadata:
      labels:
        app: no-dns-test-6
        backstage.io/kubernetes-id: no-dns-test-6
        environment: dev
    spec:
      containers:
        - name: no-dns-test-6
          image: jaykumark7/no-dns-test-6:1.0.15
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "384Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
