apps/no-dns-test-6/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: no-dns-test-6
  namespace: dev
  labels:
    backstage.io/kubernetes-id: no-dns-test-6
spec:
  selector:
    app: no-dns-test-6
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
